<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Net-PwrCtrl</string>
    
    <string name="configured_devices">Configured Devices</string>
    <string name="discovered_devices">Discovered Devices</string>
    
    <string name="configure_device">Edit Device</string>
    <string name="copy_device">Copy Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="delete_all_devices">Delete all devices</string>
    <string name="requery">Re-start discovery</string>
    <string name="add_to_configured_devices">Add to configured devices</string>
    <string name="error_reading_configured_devices">Error reading configured devices</string>
    <string name="error_saving_configured_devices">Error saving configured devices</string>
    <string name="suggest_enter_username_password">You probably need to set the username/password in the device\'s settings.</string>
    <string name="error_sending_inquiry">Error sending inquiry packet</string>
    <string name="error_unknown_device">Internal program error: device unknown!</string>
    <string name="error_outlet_number">Configuration error: this outlet was not assigned a number!</string>
    <string name="error_packet_received">An error was received from the device: </string>
    <string name="error_nopass">Invalid username / password combination</string>
    <string name="error_edited_device_not_found">Internal program error: edited device not found!</string>
    <string name="error_listen_thread_exception">Could not listen on port %d:\n</string>
    <string name="error_port_lt_1024">(ports &lt; 1024 only possible on rooted devices)</string>
    <string name="error_outlet_title">Outlet data error</string>
    <string name="error_outlet_config_name">Please enter a description for every outlet.</string>
    <string name="error_outlet_config_number">Please enter only valid outlet numbers.</string>
    <string name="error_port_config_number">Please enter only valid port numbers.</string>
    <string name="error_getting_first_packet">No answer from the device. Either the ports are not configured correctly or it is out of reach. You may try sending comands, but the result is uncertain.</string>
    <string name="error_setting_outlet">No answer from the device or you don\'t gave the required permission to switch the outlet.</string>
    
    <string name="device_settings">Device Settings</string>
    <string name="device_name">Name</string>
    <string name="device_name_summary">Custom description of this device.</string>
    <string name="device_ip">Hostname or IP</string>
    <string name="device_ip_summary">The hostname or IP address to connect to.</string>
    <string name="device_mac">MAC Address</string>
    <string name="device_mac_summary">The MAC Address as reported by the device.</string>
    <string name="device_default_ports">Default UDP ports?</string>
    <string name="device_send_udp">UDP port for sending</string>
    <string name="device_send_udp_summary">Consult the device\'s web interface ("Receive Port").</string>
    <string name="device_recv_udp">UDP port for receiving</string>
    <string name="device_recv_udp_summary">Consult the device\'s web interface ("Send Port").</string>
    <string name="device_username">Username</string>
    <string name="device_username_summary">The username to log on to the device. Can be configured from the device\'s web interface</string>
    <string name="device_password">Password</string>
    <string name="device_password_summary">The password to log on to the device.</string>
    <string name="device_outlets">Outlets</string>
    <string name="device_outlets_summary">Configure this device\'s outlets</string>
    
    <string name="menu_add_device">Add</string>
    <string name="menu_about">About</string>
    <string name="menu_remove_group">Delete group</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="default_device_name">New device</string>
    <string name="copy_of">Copy of %s</string>

    <string name="confirmation_delete_device">Delete all devices?</string>
    <string name="confirmation_delete_all_devices">Are you sure you want to delete all devices?</string>
    
    <string name="preference_standard_send_port">Standard UDP port for sending queries</string>
    <string name="preference_standard_send_port_summary">Queries will be sent to this port. (This corresponds to the \"RECEIVE\" port in the device\'s web interface)</string>
    <string name="preference_standard_recv_port">Standard UDP port for receiving from the device</string>
    <string name="preference_standard_recv_port_summary">The application will listen on this port for answers (and on each port of your configured devices, if any). This corresponds to the \"SEND\" port in the device\'s web interface</string>
    
    <string name="outlet_name">Name</string>
    <string name="outlet_numbers">Number</string>
    <string name="outlet_delete">Delete</string>
    
    <string name="choose_widget_device">Please choose a device for this widget</string>
    <string name="choose_shortcut_outlets">Create Shortcut/Group</string>
    <string name="all_outlets">Outlets</string>
    <string name="groups">Groups</string>
    <string name="devices">Devices</string>
    
    <string name="groupname">Group name</string>
    <string name="groupname_long">Please enter a new group name</string>
    <string name="shortcut_show_mainwindow">Show mainwindow on execution</string>
    <string name="delete_all_groups">Delete all groups?</string>
    <string name="confirmation_delete_all_groups">Are you sure you want to delete all groups?</string>
    
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="toggle">Toggle</string>
    
    <string-array name="shortcutchoices">
        <item>No change</item>
        <item>Switch off</item>
        <item>Switch on</item>
        <item>Toggle</item>
    </string-array>
</resources>