<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="Device Settings">
    <EditTextPreference android:summary="@string/device_name_summary" android:key="setting_device_name" android:title="@string/device_name" android:dialogMessage="@string/device_name_summary" android:dialogTitle="@string/device_name"/>
    <EditTextPreference android:summary="@string/device_ip_summary" android:key="setting_device_ip" android:title="@string/device_ip" android:dialogMessage="@string/device_ip_summary" android:dialogTitle="@string/device_ip"/>
    <EditTextPreference android:summary="@string/device_username_summary" android:key="setting_username" android:title="@string/device_username" android:dialogMessage="@string/device_username_summary" android:dialogTitle="@string/device_username"/>
    <EditTextPreference android:summary="@string/device_password_summary" android:key="setting_password" android:title="@string/device_password" android:password="true" android:dialogMessage="@string/device_password_summary" android:dialogTitle="@string/device_password"/>
    <CheckBoxPreference android:key="setting_nonstandard_ports" android:title="@string/device_nonstandard_ports"/>
    <EditTextPreference android:key="setting_send_udp" android:title="@string/device_send_udp" android:inputType="number" android:defaultValue="@integer/default_send_port" android:dependency="setting_nonstandard_ports" android:shouldDisableView="true" android:dialogMessage="@string/device_send_udp_summary" android:summary="@string/device_send_udp_summary" android:dialogTitle="@string/device_send_udp"/>
    <EditTextPreference android:key="setting_recv_udp" android:title="@string/device_recv_udp" android:inputType="number" android:defaultValue="@integer/default_recv_port" android:dependency="setting_nonstandard_ports" android:shouldDisableView="true" android:dialogMessage="@string/device_recv_udp_summary" android:summary="@string/device_recv_udp_summary" android:dialogTitle="@string/device_recv_udp"/>
	<EditTextPreference android:summary="@string/device_mac_summary" android:key="setting_device_mac" android:title="@string/device_mac" android:dialogMessage="@string/device_mac_summary" android:dialogTitle="@string/device_mac"/>
<!-- <PreferenceScreen android:title="@string/device_outlets" android:key="setting_outlets" android:summary="@string/device_outlets_summary"></PreferenceScreen>  -->    
</PreferenceScreen>